# haskell-electron-tutorial

./: README.md  movieMonad.cabal  stack.yaml
